add class front to iindex.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Delani studio</title>
 </head>
 <body>
+    <div class="front">
+        <img src="images/assets/logo/logo.png" alt="logo" id="logo" >
+        <h1>WELCOME</h1>
+
+    </div>
     
 </body>
 </html>
