add h1 element to index.html

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/jquery-3.6.0.min (1).js"></script>
+    <script src="js/scripts.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Delani studio</title>
 </head>
 <body>
     <div class="front">
         <img src="images/assets/logo/logo.png" alt="logo" id="logo" >
         <h1>WELCOME</h1>
+        <h1>TO DELANI STUDIO</h1>
 
     </div>
     
