--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <img src="images/assets/logo/logo.png" alt="logo" id="logo" >
         <h1>WELCOME</h1>
         <h1>TO DELANI STUDIO</h1>
+        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
 
     </div>
     
