--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <script src="js/jquery-3.6.0.min (1).js"></script>
     <script src="js/scripts.js"></script>
-   
+
     <title>Delani studio</title>
-</head>
-<body>
-    <div class="front">
-        <img src="../Delani-studio/images/assets/logo/logo.png"alt="logo" id="logo" >
+  </head>
+  <body>
+    <div class="front"><br>
+      <img
+        src="../Delani-studio/images/assets/logo/logo.png"
+        alt="logo"
+        id="logo"
+      />
+      <div class="intro-content">
         <h1>WELCOME</h1>
         <h1>TO DELANI STUDIO</h1>
         <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-        <div id="mouse-click">
-            <img src="../Delani-studio/images/assets/mouse_click.png" alt="mouse_click">
-        </div>
+      </div>
 
+      <div id="mouse-click">
+        <img
+          src="../Delani-studio/images/assets/mouse_click.png"
+          alt="mouse_click"
+        />
+      </div>
     </div>
-    
-</body>
+    <div class="About-us">
+        <h1 id="About">ABOUT US</h1>
+        <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</p>
+        <p>Our approach unifies design, development and product managent to create exceptional products.</p>
+        <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
+        <p>we help translate them into active and elegant solutions.</p>
+    </div>
+  </body>
 </html>
