--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,33 +11,36 @@
     <script src="js/scripts.js"></script>
 
     <title>Delani studio</title>
-  </head>
-  <body>
-    <div class="front"><br>
-      <img
-        src="../Delani-studio/images/assets/logo/logo.png"
-        alt="logo"
-        id="logo"
-      />
-      <div class="intro-content">
-        <h1>WELCOME</h1>
-        <h1>TO DELANI STUDIO</h1>
-        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-      </div>
+</head>
 
-      <div id="mouse-click">
-        <img
-          src="../Delani-studio/images/assets/mouse_click.png"
-          alt="mouse_click"
-        />
-      </div>
+<body>
+    <div class="front"><br>
+        <img src="../Delani-studio/images/assets/logo/logo.png" alt="logo" id="logo" />
+        <div class="intro-content">
+            <h1>WELCOME</h1>
+            <h1>TO DELANI STUDIO</h1>
+            <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+        </div>
+
+        <div id="mouse-click">
+            <img src="../Delani-studio/images/assets/mouse_click.png" alt="mouse_click" />
+        </div>
     </div>
     <div class="About-us">
         <h1 id="About">ABOUT US</h1>
-        <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software development process are intergrated , interactive and agile.</p>
+        <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software
+            development process are intergrated , interactive and agile.</p>
         <p>Our approach unifies design, development and product managent to create exceptional products.</p>
         <p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
         <p>we help translate them into active and elegant solutions.</p>
     </div>
-  </body>
+    <div id="service">
+        <h1>SERVICES</h1>
+        <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to
+            understand your product vission.</p>
+        <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
+        <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
+    </div>
+</body>
+
 </html>
