--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="About-us">
-        <h1 id="About">ABOUT US</h1>
+        <h2 id="About">ABOUT US</h2>
         <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software
             development process are intergrated , interactive and agile.</p>
         <p>Our approach unifies design, development and product managent to create exceptional products.</p>
@@ -37,12 +37,15 @@
     <div id="service">
 
         <div id="service-content">
-            <h1>SERVICES</h1>
+            <h2>SERVICES</h2>
             <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to
                 understand your product vission.</p>
             <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
             <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
         </div>
+    </div>
+    <div id="what-we-do">
+        <div class="heading"><h2>WHAT WE DO</h2></div>
     </div>
 </body>
 
