--- a/index.html
+++ b/index.html
@@ -45,7 +45,22 @@
         </div>
     </div>
     <div id="what-we-do">
-        <div class="heading"><h2>WHAT WE DO</h2></div>
+        <div class="heading">
+            <h2>WHAT WE DO</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div id="design">
+                        <h2 class="title">DESIGN</h2>
+                        <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
+                        <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+                    </div>
+                    <div class="design-image">
+                        <img src="../Delani-studio/images/assets/services_icons/design_icon.png" alt="design">
+                        <p>DESIGN</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
