--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
                         <p>DESIGN</p>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div id="development">
+                        <h2 id="title">DEVELOPMENT</h2>
+                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+                        <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
