--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
                         <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
                         <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
                     </div>
+                    <div class="dev-image">
+                        <img src="../Delani-studio/images/assets/services_icons/dev_icon.png" alt="development">
+                        <p>DEVELOPMENT</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div id="management">
+                        <h2 id="title">PRODUCT MANAGEMENT</h2>
+                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
+                        <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+                    </div>
+                    <div class="product-image">
+                        <img src="../Delani-studio/images/assets/services_icons/product_icon.png" alt="product management">
+                        <p>PRODUCT MANAGEMENT</p>
+                    </div>
                 </div>
             </div>
         </div>
