--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>based on your requirements, we can provide a complete offering or just the piece you need. </p>
         </div>
     </div>
-    <div id="what-we-do">
+    <div class="container" id="what-we-do">
         <div class="heading">
             <h2>WHAT WE DO</h2>
             <div class="row">
@@ -83,6 +83,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container-fluid" id="portfolio">
+
     </div>
 </body>
 
