--- a/index.html
+++ b/index.html
@@ -84,7 +84,13 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid" id="portfolio">
+    <div class="container portfolio">
+        <h2>PORTFOLIO</h2>
+        <div class="row">
+            <div class="col-md-3">
+                
+            </div>
+        </div>
 
     </div>
 </body>
