add class container fluid to index.html

--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
         </div>
 
     </div>
+    <div class="container-fluid">
+        <h2>CONTACT US</h2>
+        <div class="form">
+            <form action="">
+                <input type="text" name="name" id="name" placeholder="Name..." class="form-cotrol" value="">
+                <input type="email" name="name" id="email" placeholder="Email..." class="form-control" value="">
+            </form>
+
+        </div>
+    </div>
 </body>
 
 </html>
