add changes to index.html

--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
                 <input type="text" name="name" id="name" placeholder="Name..." class="form-cotrol" value="">
                 <input type="email" name="name" id="email" placeholder="Email..." class="form-control" value="">
             </form>
+            <div class="form-control">
+                <textarea class="form-control" id="comments" cols="30" rows="10" placeholder="Your message here..."></textarea>
+            </div>
+            <button type="submit" class="btn" id="btn">Submit</button>
 
         </div>
     </div>
