--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
             <form action="">
                 <input type="text" name="name" id="name" placeholder="Name..." class="form-cotrol" value="">
                 <input type="email" name="name" id="email" placeholder="Email..." class="form-control" value="">
-            </form>
+            </form><br>
             <div class="form-control">
-                <textarea class="form-control" id="comments" cols="30" rows="10" placeholder="Your message here..."></textarea>
+                <textarea class="form-control" id="comments" rows="10" cols="50" placeholder="Your message here..."></textarea>
             </div>
             <button type="submit" class="btn" id="btn">Submit</button>
 
