--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
 
         </div>
     </div>
+    <footer class="footer">
+        <img src="../Delani-studio/images/assets/social_icons/twitter.png" alt="twitter">
+
+    </footer>
 </body>
 
 </html>
