--- a/index.html
+++ b/index.html
@@ -144,6 +144,16 @@
     </div>
     <footer class="footer">
         <img src="../Delani-studio/images/assets/social_icons/twitter.png" alt="twitter">
+        <img src="../Delani-studio/images/assets/social_icons/dribble.png" alt="dribble">
+        <img src="../Delani-studio/images/assets/social_icons/facebook.png" alt="facebook">
+        <img src="../Delani-studio/images/assets/social_icons/g_plus.png" alt="g_plus">
+        <img src="../Delani-studio/images/assets/social_icons/skype.png" alt="skype">
+        <img src="../Delani-studio/images/assets/social_icons/stumble_upon.png" alt="stumble_upon">
+        <img src="../Delani-studio/images/assets/social_icons/behance.png" alt="behance">
+        <img src="../Delani-studio/images/assets/social_icons/pinterest.png" alt="pinterest">
+        <img src="../Delani-studio/images/assets/social_icons/flickr.png" alt="flickr">
+        <p>DELANI STUDIO</p>
+        <p>2022</p>
 
     </footer>
 </body>
