--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <script src="js/jquery-3.6.0.min (1).js"></script>
     <script src="js/scripts.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
     <title>Delani studio</title>
 </head>
@@ -51,8 +57,10 @@
                 <div class="col-md-4">
                     <div id="design">
                         <h2 class="title">DESIGN</h2>
-                        <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
-                        <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
+                        <p>Our design practice offers a full range of services including brand strategy, interaction and
+                            visual design and user experience testing.</p>
+                        <p>Throughout your project, our designers create and implement visual design and workflows,
+                            solicit user feedback and work with you to make sure what gets built is what is needed.</p>
                     </div>
                     <div class="design-image">
                         <img src="../Delani-studio/images/assets/services_icons/design_icon.png" alt="design">
@@ -62,8 +70,10 @@
                 <div class="col-md-4">
                     <div id="development">
                         <h2 id="title">DEVELOPMENT</h2>
-                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.</p>
-                        <p>They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                        </p>
+                        <p>They collaborate with your team to write, and improve code on a daily basis, using proven
+                            practices such as test-driven development and pair programming.</p>
                     </div>
                     <div class="dev-image">
                         <img src="../Delani-studio/images/assets/services_icons/dev_icon.png" alt="development">
@@ -73,11 +83,13 @@
                 <div class="col-md-4">
                     <div id="management">
                         <h2 id="title">PRODUCT MANAGEMENT</h2>
-                        <p>Planning and development is iterartive. Because we are constantly coding and testing, the products we build are always ready to go live.</p>
+                        <p>Planning and development is iterartive. Because we are constantly coding and testing, the
+                            products we build are always ready to go live.</p>
                         <p>This iterative process allows for changes as business requirements evolve.</p>
                     </div>
                     <div class="product-image">
-                        <img src="../Delani-studio/images/assets/services_icons/product_icon.png" alt="product management">
+                        <img src="../Delani-studio/images/assets/services_icons/product_icon.png"
+                            alt="product management">
                         <p>PRODUCT MANAGEMENT</p>
                     </div>
                 </div>
@@ -104,7 +116,7 @@
                 <img src="../Delani-studio/images/assets/portfolio/work4.jpg" alt="work4">
                 <div id="overlay4" class="text">Jim Carrey</div>
             </div>
-            
+
         </div>
         <div class="row" id="portfolio">
             <div class="col-md-3" id="work5">
@@ -124,7 +136,7 @@
                 <img src="../Delani-studio/images/assets/portfolio/work8.jpg" alt="work8">
                 <div id="overlay8" class="text">Giraffe Restaurant</div>
             </div>
-            
+
         </div>
 
     </div>
@@ -136,7 +148,8 @@
                 <input type="email" name="name" id="email" placeholder="Email..." class="form-control" value="">
             </form><br>
             <div class="form-control">
-                <textarea class="form-control" id="comments" rows="10" cols="50" placeholder="Your message here..."></textarea>
+                <textarea class="form-control" id="comments" rows="10" cols="50"
+                    placeholder="Your message here..."></textarea>
             </div>
             <button type="submit" class="btn" id="btn">Submit</button>
 
@@ -152,6 +165,7 @@
         <img src="../Delani-studio/images/assets/social_icons/behance.png" alt="behance">
         <img src="../Delani-studio/images/assets/social_icons/pinterest.png" alt="pinterest">
         <img src="../Delani-studio/images/assets/social_icons/flickr.png" alt="flickr">
+
         <p>DELANI STUDIO</p>
         <p>2022</p>
 
