add css rule to class form

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     </div>
     <div class="container-fluid">
-        <h2>CONTACT US</h2>
+        <h2 class="contact">CONTACT US</h2>
         <div class="form">
             <form action="">
                 <input type="text" name="name" id="name" placeholder="Name..." class="form-cotrol" value="">
