--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
         <div class="form">
             <form action="">
                 <input type="text" name="name" id="name" placeholder="Name..." class="form-cotrol" value="">
-                <input type="email" name="name" id="email" placeholder="Email..." class="form-control" value="">
+                <input type="email" name="name" id="email" placeholder="Email..." col-md-6 class="form-control" value="">
             </form><br>
             <div class="form-control">
-                <textarea class="form-control" id="comments" rows="10" cols="50"
+                <textarea class="form-control" id="comments" rows="10" cols="80"
                     placeholder="Your message here..."></textarea>
             </div>
             <button type="submit" class="btn" id="btn">Submit</button>
