--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="form">
             <form action="">
                 <input type="text" name="name" id="name" placeholder="Name..." class="form-cotrol" value="">
-                <input type="email" name="name" id="email" placeholder="Email..." col-md-6 class="form-control" value="">
+                <input type="email" name="name" id="email" placeholder="Email..." class="form-control" value="">
             </form><br>
             <div class="form-control">
                 <textarea class="form-control" id="comments" rows="10" cols="80"
