--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <script src="js/jquery-3.6.0.min (1).js"></script>
     <script src="js/scripts.js"></script>
@@ -97,32 +98,33 @@
         </div>
     </div>
     <div class="container portfolio">
-        <h2>PORTFOLIO</h2>
+        <h2 class="header">PORTFOLIO</h2>
         <div class="row" id="portfolio">
-            <div class="col-md-3" id="work1">
-                <img src="../Delani-studio/images/assets/portfolio/work1.jpg" alt="work1">
-                <div id="overlay1" class="text">Grey Studio</div>
-
-            </div>
-            <div class="col-md-3" id="work2">
-                <img src="../Delani-studio/images/assets/portfolio/work2.jpg" alt="work2">
-                <div id="overlay2" class="text">Ontario Security</div>
-            </div>
-            <div class="col-md-3" id="work3">
-                <img src="../Delani-studio/images/assets/portfolio/work3.jpg" alt="work3">
-                <div id="overlay3" class="text">Pyramids</div>
-            </div>
             <div class="col-md-3" id="work4">
                 <img src="../Delani-studio/images/assets/portfolio/work4.jpg" alt="work4">
+                <div id="overlay1" class="text">Grey Studio</div>
+            </div>
+            <br>
+            <div class="col-md-3" id="work3">
+                <img src="../Delani-studio/images/assets/portfolio/work3.jpg" alt="work3">
+                <div id="overlay2" class="text">Ontario Security</div>
+            </div>
+            <br><br><br>
+            <div class="col-md-3" id="work2">
+                <img src="../Delani-studio/images/assets/portfolio/work2.jpg" alt="work2">
+                <div id="overlay3" class="text">Pyramids</div>
+            </div>
+            <br><br><br>
+            <div class="col-md-3" id="work1">
+                <img src="../Delani-studio/images/assets/portfolio/work1.jpg" alt="work1">
                 <div id="overlay4" class="text">Jim Carrey</div>
             </div>
-
         </div>
+        
         <div class="row" id="portfolio">
             <div class="col-md-3" id="work5">
                 <img src="../Delani-studio/images/assets/portfolio/work5.jpg" alt="work5">
                 <div id="overlay5" class="text">Have a good day</div>
-
             </div>
             <div class="col-md-3" id="work6">
                 <img src="../Delani-studio/images/assets/portfolio/work6.jpg" alt="work6">
@@ -136,23 +138,19 @@
                 <img src="../Delani-studio/images/assets/portfolio/work8.jpg" alt="work8">
                 <div id="overlay8" class="text">Giraffe Restaurant</div>
             </div>
-
         </div>
-
     </div>
     <div class="container-fluid">
         <h2 class="contact">CONTACT US</h2>
         <div class="form">
-            <form action="">
-                <input type="text" name="name" id="name" placeholder="Name..." class="form-cotrol" value="">
-                <input type="email" name="name" id="email" placeholder="Email..." class="form-control" value="">
+            <form action="" >
+                <input type="text" name="name" id="name" placeholder="Name..." size="23" class="form-cotrol" value="">
+                <input type="email" name="name" id="email" placeholder="Email..." size="23" class="form-control" value="">
             </form><br>
             <div class="form-control">
-                <textarea class="form-control" id="comments" rows="10" cols="80"
-                    placeholder="Your message here..."></textarea>
+                <textarea class="form-control" id="comments" rows="8" placeholder="Your message here..."></textarea>
             </div>
             <button type="submit" class="btn" id="btn">Submit</button>
-
         </div>
     </div>
     <footer class="footer">
