add changes to index.html

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div id="overlay4" class="text">Jim Carrey</div>
             </div>
         </div>
-        
+
         <div class="row" id="portfolio">
             <div class="col-md-3" id="work5">
                 <img src="../Delani-studio/images/assets/portfolio/work5.jpg" alt="work5">
@@ -143,9 +143,10 @@
     <div class="container-fluid">
         <h2 class="contact">CONTACT US</h2>
         <div class="form">
-            <form action="" >
+            <form action="">
                 <input type="text" name="name" id="name" placeholder="Name..." size="23" class="form-cotrol" value="">
-                <input type="email" name="name" id="email" placeholder="Email..." size="23" class="form-control" value="">
+                <input type="email" name="name" id="email" placeholder="Email..." size="23" class="form-control"
+                    value="">
             </form><br>
             <div class="form-control">
                 <textarea class="form-control" id="comments" rows="8" placeholder="Your message here..."></textarea>
