--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <h1>TO DELANI STUDIO</h1>
             <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
             <div class="mouse-click">
-                <img src="../Delani-studio/images/assets/mouse_click.png" alt="mouse_click"
-                        id="mouse-click">
+                <img src="../Delani-studio/images/assets/mouse_click.png" alt="mouse_click" id="mouse-click">
             </div>
 
         </div>
@@ -55,50 +54,48 @@
         </div>
     </div>
     <div class="container" id="what-we-do">
-        <div class="heading">
-            <h2>WHAT WE DO</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <div id="design">
-                        <h2 class="title">DESIGN</h2>
-                        <p>Our design practice offers a full range of services including brand strategy, interaction and
-                            visual design and user experience testing.</p>
-                        <p>Throughout your project, our designers create and implement visual design and workflows,
-                            solicit user feedback and work with you to make sure what gets built is what is needed.</p>
-                    </div>
-                    <div class="design-image">
-                        <img src="../Delani-studio/images/assets/services_icons/design_icon.png" alt="design">
-                        <p>DESIGN</p>
-                    </div>
+        <h2 class="heading">WHAT WE DO</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div id="design">
+                    <h2 class="title">DESIGN</h2>
+                    <p>Our design practice offers a full range of services including brand strategy, interaction and
+                        visual design and user experience testing.</p>
+                    <p>Throughout your project, our designers create and implement visual design and workflows,
+                        solicit user feedback and work with you to make sure what gets built is what is needed.</p>
                 </div>
-                <div class="col-md-4">
-                    <div id="development">
-                        <h2 id="title">DEVELOPMENT</h2>
-                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
-                        </p>
-                        <p>They collaborate with your team to write, and improve code on a daily basis, using proven
-                            practices such as test-driven development and pair programming.</p>
-                    </div>
-                    <div class="dev-image">
-                        <img src="../Delani-studio/images/assets/services_icons/dev_icon.png" alt="development">
-                        <p>DEVELOPMENT</p>
-                    </div>
+                <div class="design-image">
+                    <img src="../Delani-studio/images/assets/services_icons/design_icon.png" alt="design">
+                    <p>DESIGN</p>
                 </div>
-                <div class="col-md-4">
-                    <div id="management">
-                        <h2 id="title">PRODUCT MANAGEMENT</h2>
-                        <p>Planning and development is iterartive. Because we are constantly coding and testing, the
-                            products we build are always ready to go live.</p>
-                        <p>This iterative process allows for changes as business requirements evolve.</p>
-                    </div>
-                    <div class="product-image">
-                        <img src="../Delani-studio/images/assets/services_icons/product_icon.png"
-                            alt="product management">
-                        <p>PRODUCT MANAGEMENT</p>
-                    </div>
+            </div>
+            <div class="col-md-4">
+                <div id="development">
+                    <h2 id="title">DEVELOPMENT</h2>
+                    <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                    </p>
+                    <p>They collaborate with your team to write, and improve code on a daily basis, using proven
+                        practices such as test-driven development and pair programming.</p>
+                </div>
+                <div class="dev-image">
+                    <img src="../Delani-studio/images/assets/services_icons/dev_icon.png" alt="development">
+                    <p>DEVELOPMENT</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div id="management">
+                    <h2 id="title">PRODUCT MANAGEMENT</h2>
+                    <p>Planning and development is iterartive. Because we are constantly coding and testing, the
+                        products we build are always ready to go live.</p>
+                    <p>This iterative process allows for changes as business requirements evolve.</p>
+                </div>
+                <div class="product-image">
+                    <img src="../Delani-studio/images/assets/services_icons/product_icon.png" alt="product management">
+                    <p>PRODUCT MANAGEMENT</p>
                 </div>
             </div>
         </div>
+
     </div>
     <div class="container portfolio">
         <h2 class="header">PORTFOLIO</h2>
