--- a/index.html
+++ b/index.html
@@ -102,41 +102,41 @@
         <div class="row" id="portfolio">
             <div class="col-md-3" id="work4">
                 <img src="../Delani-studio/images/assets/portfolio/work4.jpg" alt="work4">
-                <div id="overlay1" class="text">Grey Studio</div>
+                <div id="textHover1" class="text">Grey Studio</div>
             </div>
             <br>
             <div class="col-md-3" id="work3">
                 <img src="../Delani-studio/images/assets/portfolio/work3.jpg" alt="work3">
-                <div id="overlay2" class="text">Ontario Security</div>
+                <div id="textHover2" class="text">Ontario Security</div>
             </div>
             <br><br><br>
             <div class="col-md-3" id="work2">
                 <img src="../Delani-studio/images/assets/portfolio/work2.jpg" alt="work2">
-                <div id="overlay3" class="text">Pyramids</div>
+                <div id="textHover3" class="text">Pyramids</div>
             </div>
             <br><br><br>
             <div class="col-md-3" id="work1">
                 <img src="../Delani-studio/images/assets/portfolio/work1.jpg" alt="work1">
-                <div id="overlay4" class="text">Jim Carrey</div>
+                <div id="textHover4" class="text">Jim Carrey</div>
             </div>
         </div>
 
         <div class="row" id="portfolio">
             <div class="col-md-3" id="work5">
                 <img src="../Delani-studio/images/assets/portfolio/work5.jpg" alt="work5">
-                <div id="overlay5" class="text">Have a good day</div>
+                <div id="textHover5" class="text">Have a good day</div>
             </div>
             <div class="col-md-3" id="work6">
                 <img src="../Delani-studio/images/assets/portfolio/work6.jpg" alt="work6">
-                <div id="overlay6" class="text">Calculator</div>
+                <div id="textHover6" class="text">Calculator</div>
             </div>
             <div class="col-md-3" id="work7">
                 <img src="../Delani-studio/images/assets/portfolio/work7.jpg" alt="work7">
-                <div id="overlay7" class="text">Burned</div>
+                <div id="textHover7" class="text">Burned</div>
             </div>
             <div class="col-md-3" id="work8">
                 <img src="../Delani-studio/images/assets/portfolio/work8.jpg" alt="work8">
-                <div id="overlay8" class="text">Giraffe Restaurant</div>
+                <div id="textHover8" class="text">Giraffe Restaurant</div>
             </div>
         </div>
     </div>
