--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
     <title>Delani studio</title>
 </head>
 
@@ -36,7 +36,7 @@
 
     </div>
     <div class='about' id="About-us">
-        <h2 id="About">ABOUT US</h2>
+        <h3 id="About">ABOUT US</h3>
         <p>When you work with us, you are part of a team of commited collaborators. All aspects of our software
             development process are intergrated , interactive and agile.</p>
         <p>Our approach unifies design, development and product managent to create exceptional products.</p>
@@ -46,7 +46,7 @@
     <div id="service">
 
         <div id="service-content">
-            <h2>SERVICES</h2>
+            <h3>SERVICES</h3>
             <p>Before we sign a contract or write a line of code, our team will spend the neccessary time needed to
                 understand your product vission.</p>
             <p>The outcome of the scoping session a proposal or high-level statement of work.</p>
@@ -54,11 +54,11 @@
         </div>
     </div>
     <div class="container" id="what-we-do">
-        <h2 class="heading">WHAT WE DO</h2>
+        <h3 class="heading">WHAT WE DO</h3>
         <div class="row">
             <div class="col-md-4">
                 <div id="design">
-                    <h2 class="title">DESIGN</h2>
+                    <h3 class="title">DESIGN</h3>
                     <p>Our design practice offers a full range of services including brand strategy, interaction and
                         visual design and user experience testing.</p>
                     <p>Throughout your project, our designers create and implement visual design and workflows,
@@ -71,7 +71,7 @@
             </div>
             <div class="col-md-4">
                 <div id="development">
-                    <h2 id="title">DEVELOPMENT</h2>
+                    <h3 id="title">DEVELOPMENT</h3>
                     <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
                     </p>
                     <p>They collaborate with your team to write, and improve code on a daily basis, using proven
@@ -84,7 +84,7 @@
             </div>
             <div class="col-md-4">
                 <div id="management">
-                    <h2 id="title">PRODUCT MANAGEMENT</h2>
+                    <h3 id="title">PRODUCT MANAGEMENT</h3>
                     <p>Planning and development is iterartive. Because we are constantly coding and testing, the
                         products we build are always ready to go live.</p>
                     <p>This iterative process allows for changes as business requirements evolve.</p>
@@ -98,7 +98,7 @@
 
     </div>
     <div class="container portfolio">
-        <h2 class="header">PORTFOLIO</h2>
+        <h3 class="header">PORTFOLIO</h3>
         <div class="row" id="portfolio">
             <div class="col-md-3" id="work4">
                 <img src="../Delani-studio/images/assets/portfolio/work4.jpg" alt="work4">
@@ -143,10 +143,10 @@
     <br><br>
     <div class="container-fluid">
         <div class="contact-content">
-            <h2 class="contact">CONTACT US</h2>
-            <form
-                action="https://gmail.us14.list-manage.com/subscribe/post?u=9184ad962cd7fa4c536375e8f&amp;id=55ec3e923a"
-                method="post">
+            <h3 class="contact">CONTACT US</h3>
+            <form id="form-submit" action="https://gmail.us14.list-manage.com/subscribe/post" method="post">
+                <input type="hidden" name="u" value="9184ad962cd7fa4c536375e8f">
+                <input type="hidden" name="id" value="55ec3e923a">
                 <div class="row">
                     <div class="col">
                         <input type="text" id="name" placeholder="Name.." class="form-control" value="">
@@ -173,7 +173,7 @@
         <img src="../Delani-studio/images/assets/social_icons/behance.png" alt="behance">
         <img src="../Delani-studio/images/assets/social_icons/pinterest.png" alt="pinterest">
         <img src="../Delani-studio/images/assets/social_icons/flickr.png" alt="flickr">
-
+        <br><br>
         <p>DELANI STUDIO</p>
         <p>2022</p>
 
