--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                
                 <div class="row">
                     <div class="col">
-                        <input type="text" id="name" placeholder="Name.." name="NAME" class="form-control" value="">
+                        <input type="text" id="name" placeholder="Name.." name="NAME" class="form-control" >
                     </div>
                     <div class="col">
-                        <input type="email" id="email" placeholder="Email.." name="EMAIL" class="form-control" value="">
+                        <input type="email" id="email" placeholder="Email.." name="EMAIL" class="form-control">
                     </div>
                 </div><br>
                 <div class="form-group">
