add js/scripts and css/styles.css rules

--- a/index.html
+++ b/index.html
@@ -158,7 +158,10 @@
                     <textarea class="form-control" id="comments" name="MESSAGES" rows="8" placeholder="Your message here..."></textarea>
                 </div>
                 <br>
-                <button type="submit" class="btn btn-warning" id="btn">Submit</button>
+                <div class="button">
+                    <button type="submit" class="btn btn-warning" id="btn">Submit</button>
+                </div>
+                
         </div>
         </form>
     </div>
